@@ -25014,6 +25014,7 @@ Intense winter surface melt on an Antarctic ice shelf, \textit{Geophys.\ Res.\ L
   number =	 {D14},
   month =	 {oct},
   pages =        {D14220, doi:10.1029/2007JD009744},
+  txtnote =      {Warren, S. G., and R. E. Brandt (2008), Optical constants of ice from the ultraviolet to the microwave: A revised compilation, J. Geophys. Res., 113(D14220), doi:10.1029/2007JD009744.},
   annote = 	 {h2o ice idx_rfr snw crs pdf mie}
 }
 
